--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "eslint"
+		"lint": "eslint",
+		"analyze": "ANALYZE=true next build"
 	},
 	"dependencies": {
 		"@next/third-parties": "^16.0.5",
@@ -29,6 +30,7 @@
 		"tailwind-merge": "^3.4.0"
 	},
 	"devDependencies": {
+		"@next/bundle-analyzer": "^16.0.10",
 		"@tailwindcss/postcss": "^4",
 		"@types/node": "^20",
 		"@types/nodemailer": "^7.0.4",
